# cosmic_insight

./: .gitignore  Makefile  README.md  pyproject.toml  tools.ps1  tox.ini
data/: sample_stage1.json  sample_stage2.json  sample_stage3.json
docs/: design_rationale.md
scripts/: run_all.py  run_stage1.py  run_stage2.py  run_stage3.py
src/cosmic_insight/: __init__.py  cli.py  config.py  io_json.py  pipeline.py  stage1_signal.py  stage2_angles.py  stage3_correlation.py  types.py  utils.py
src/cosmic_insight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py  test_stage1_signal.py  test_stage2_angles.py  test_stage3_correlation.py  test_unhappy_paths.py
